# LexerProject

./: CMakeLists.txt  Input.txt  main.cpp
